manually added links, expanded time for Python

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,13 +3,13 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Python: running, data types, functions</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/01-run-quit/index.html">Python: running, data types, functions</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Python Libraries and Data Frames(Continued)</td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/06-libraries/index.html">Python Libraries and Data Frames</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/09-plotting/index.html">Python plotting</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
+      <tr> <td>15:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/01-intro/index.html">Automating Tasks with the Unix Shell</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
@@ -17,13 +17,13 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Plotting, Lists & Conditionals </td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/11-lists/index.html">Lists, Loops & Conditionals </a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Loops, Functions, Variable Scope </td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/14-looping-data-sets/index.html">Loops over datasets, Functions, Variable Scope</a> </td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-gapminder/18-style/index.html">Programming Style (Python); Version Control with Git</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Version Control with Git (Continued)</td> </tr>
+      <tr> <td>15:00</td>  <td><a href="https://swcarpentry.github.io/git-novice/07-github/index.html">Version Control with Git, Remotes in GitHub (Continued)</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
